--- a/student_files/session2_differential_equations_in_r/session2_differential_equations_in_r.html
+++ b/student_files/session2_differential_equations_in_r/session2_differential_equations_in_r.html
@@ -4040,6 +4040,11 @@ vertical-align: -.125em;
   <a href="../session2_differential_equations_in_r/session2_differential_equations_in_r.html" class="sidebar-item-text sidebar-link active">Differential Equations in R</a>
   </div>
 </li>
+        <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="../session3_writing_a_model_to_suit_the_infectious_agent/session3_writing_a_model_to_suit_the_infectious_agent.html" class="sidebar-item-text sidebar-link">Designing a model to suit the pathogen</a>
+  </div>
+</li>
     </ul>
     </div>
 </nav>
