--- a/student_files/session2_differential_equations_in_r/session2_differential_equations_in_r.html
+++ b/student_files/session2_differential_equations_in_r/session2_differential_equations_in_r.html
@@ -166,7 +166,12 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </li>
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="../session4_covid_thailand_seir_model/session4_covid_thailand_seir_model.html" class="sidebar-item-text sidebar-link">COVID-19 Modelling in R</a>
+  <a href="../session4_covid_thailand_seir_model/session4_covid_thailand_seir_model.html" class="sidebar-item-text sidebar-link">Fitting models in R</a>
+  </div>
+</li>
+        <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="../session5_fitting_models_in_r/session5_fitting_models_in_r.html" class="sidebar-item-text sidebar-link">COVID-19 Modelling in R</a>
   </div>
 </li>
         <li class="sidebar-item">
