--- a/student_files/session3_writing_a_model_to_suit_the_infectious_agent/session3_writing_a_model_to_suit_the_infectious_agent.html
+++ b/student_files/session3_writing_a_model_to_suit_the_infectious_agent/session3_writing_a_model_to_suit_the_infectious_agent.html
@@ -103,7 +103,12 @@ ul.task-list{list-style: none;}
 </li>
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="../session4_covid_thailand_seir_model/session4_covid_thailand_seir_model.html" class="sidebar-item-text sidebar-link">COVID-19 Modelling in R</a>
+  <a href="../session4_covid_thailand_seir_model/session4_covid_thailand_seir_model.html" class="sidebar-item-text sidebar-link">Fitting models in R</a>
+  </div>
+</li>
+        <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="../session5_fitting_models_in_r/session5_fitting_models_in_r.html" class="sidebar-item-text sidebar-link">COVID-19 Modelling in R</a>
   </div>
 </li>
         <li class="sidebar-item">
@@ -187,7 +192,7 @@ textarea {
 <section id="more-practice" class="level2">
 <h2 class="anchored" data-anchor-id="more-practice">More practice</h2>
 <ul>
-<li>Repeat this process for measles, a short-lived disease with <strong>lifelong immunity</strong>.</li>
+<li>Repeat this process for measles, a short-live`d disease with <strong>lifelong immunity</strong>.</li>
 </ul>
 <p>You might find the following diagram helpful: <img src="measles.png" class="img-fluid"></p>
 <p>Upload your model diagram:</p>
