fix panel tabsets for session 8

--- a/student_files/session2_differential_equations_in_r/session2_differential_equations_in_r.html
+++ b/student_files/session2_differential_equations_in_r/session2_differential_equations_in_r.html
@@ -179,6 +179,11 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
   <a href="../session7_vector_borne_modelling/session7_vector_borne_modelling.html" class="sidebar-item-text sidebar-link">Vector-borne disease modelling</a>
   </div>
 </li>
+        <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="../session8_vector_borne_modelling_in_r/session8_vector_borne_modelling_in_r.html" class="sidebar-item-text sidebar-link">Vector-borne disease models in R</a>
+  </div>
+</li>
     </ul>
     </div>
 </nav>
