--- a/student_files/session3_writing_a_model_to_suit_the_infectious_agent/session3_writing_a_model_to_suit_the_infectious_agent.html
+++ b/student_files/session3_writing_a_model_to_suit_the_infectious_agent/session3_writing_a_model_to_suit_the_infectious_agent.html
@@ -116,6 +116,11 @@ ul.task-list{list-style: none;}
   <a href="../session7_vector_borne_modelling/session7_vector_borne_modelling.html" class="sidebar-item-text sidebar-link">Vector-borne disease modelling</a>
   </div>
 </li>
+        <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="../session8_vector_borne_modelling_in_r/session8_vector_borne_modelling_in_r.html" class="sidebar-item-text sidebar-link">Vector-borne disease models in R</a>
+  </div>
+</li>
     </ul>
     </div>
 </nav>
