Session 8 reduce header level
Reduce header level for 'Parts'

--- a/student_files/session8_vector_borne_modelling_in_r/session8_vector_borne_modelling_in_r.html
+++ b/student_files/session8_vector_borne_modelling_in_r/session8_vector_borne_modelling_in_r.html
@@ -4302,13 +4302,13 @@ border: 0;
   <li><a href="#save-your-new-file" id="toc-save-your-new-file" class="nav-link" data-scroll-target="#save-your-new-file">Save your new file</a></li>
   <li><a href="#set-working-directory" id="toc-set-working-directory" class="nav-link" data-scroll-target="#set-working-directory">Set working directory</a></li>
   <li><a href="#load-required-packages" id="toc-load-required-packages" class="nav-link" data-scroll-target="#load-required-packages">Load required packages</a></li>
-  </ul></li>
   <li><a href="#part-1-a-model-for-dengue" id="toc-part-1-a-model-for-dengue" class="nav-link" data-scroll-target="#part-1-a-model-for-dengue"><strong>Part 1:</strong> A model for dengue</a></li>
   <li><a href="#part-2-adapting-the-model" id="toc-part-2-adapting-the-model" class="nav-link" data-scroll-target="#part-2-adapting-the-model"><strong>Part 2:</strong> Adapting the model</a></li>
   <li><a href="#part-3-the-impact-of-seasonality" id="toc-part-3-the-impact-of-seasonality" class="nav-link" data-scroll-target="#part-3-the-impact-of-seasonality"><strong>Part 3:</strong> The impact of seasonality</a></li>
   <li><a href="#part-4-interventions" id="toc-part-4-interventions" class="nav-link" data-scroll-target="#part-4-interventions"><strong>Part 4:</strong> Interventions</a>
   <ul class="collapse">
   <li><a href="#interventions-to-control-dengue" id="toc-interventions-to-control-dengue" class="nav-link" data-scroll-target="#interventions-to-control-dengue">Interventions to control dengue</a></li>
+  </ul></li>
   </ul></li>
   </ul>
 </nav>
@@ -4406,13 +4406,9 @@ font-style: italic;
 <span id="cb2-9"><a href="#cb2-9" aria-hidden="true" tabindex="-1"></a>  }</span>
 <span id="cb2-10"><a href="#cb2-10" aria-hidden="true" tabindex="-1"></a>}</span></code><button title="Copy to Clipboard" class="code-copy-button"><i class="bi"></i></button></pre></div>
 </div>
-<p>
-<br>
-</p>
 </section>
-</section>
-<section id="part-1-a-model-for-dengue" class="level1">
-<h1><strong>Part 1:</strong> A model for dengue</h1>
+<section id="part-1-a-model-for-dengue" class="level2">
+<h2 class="anchored" data-anchor-id="part-1-a-model-for-dengue"><strong>Part 1:</strong> A model for dengue</h2>
 <div class="panel-tabset">
 <ul class="nav nav-tabs" role="tablist"><li class="nav-item" role="presentation"><a class="nav-link active" id="tabset-1-1-tab" data-bs-toggle="tab" data-bs-target="#tabset-1-1" role="tab" aria-controls="tabset-1-1" aria-selected="true"><strong>Part 1:</strong> A model for dengue</a></li><li class="nav-item" role="presentation"><a class="nav-link" id="tabset-1-2-tab" data-bs-toggle="tab" data-bs-target="#tabset-1-2" role="tab" aria-controls="tabset-1-2" aria-selected="false"><strong>Part 1:</strong> Solutions</a></li></ul>
 <div class="tab-content">
@@ -4763,8 +4759,8 @@ Susceptible human change = - new infections
 </div>
 </div>
 </section>
-<section id="part-2-adapting-the-model" class="level1">
-<h1><strong>Part 2:</strong> Adapting the model</h1>
+<section id="part-2-adapting-the-model" class="level2">
+<h2 class="anchored" data-anchor-id="part-2-adapting-the-model"><strong>Part 2:</strong> Adapting the model</h2>
 <div class="panel-tabset">
 <ul class="nav nav-tabs" role="tablist"><li class="nav-item" role="presentation"><a class="nav-link active" id="tabset-2-1-tab" data-bs-toggle="tab" data-bs-target="#tabset-2-1" role="tab" aria-controls="tabset-2-1" aria-selected="true"><strong>Part 2:</strong> Adapting the model</a></li><li class="nav-item" role="presentation"><a class="nav-link" id="tabset-2-2-tab" data-bs-toggle="tab" data-bs-target="#tabset-2-2" role="tab" aria-controls="tabset-2-2" aria-selected="false"><strong>Part 2:</strong> Solutions</a></li></ul>
 <div class="tab-content">
@@ -5310,8 +5306,8 @@ Recovered human change = recoveries
 </div>
 </div>
 </section>
-<section id="part-3-the-impact-of-seasonality" class="level1">
-<h1><strong>Part 3:</strong> The impact of seasonality</h1>
+<section id="part-3-the-impact-of-seasonality" class="level2">
+<h2 class="anchored" data-anchor-id="part-3-the-impact-of-seasonality"><strong>Part 3:</strong> The impact of seasonality</h2>
 <div class="panel-tabset">
 <ul class="nav nav-tabs" role="tablist"><li class="nav-item" role="presentation"><a class="nav-link active" id="tabset-3-1-tab" data-bs-toggle="tab" data-bs-target="#tabset-3-1" role="tab" aria-controls="tabset-3-1" aria-selected="true"><strong>Part 3:</strong> The impact of seasonality</a></li><li class="nav-item" role="presentation"><a class="nav-link" id="tabset-3-2-tab" data-bs-toggle="tab" data-bs-target="#tabset-3-2" role="tab" aria-controls="tabset-3-2" aria-selected="false"><strong>Part 3:</strong> Solutions</a></li></ul>
 <div class="tab-content">
@@ -5829,8 +5825,8 @@ Recovered human change = recoveries
 </div>
 </div>
 </section>
-<section id="part-4-interventions" class="level1">
-<h1><strong>Part 4:</strong> Interventions</h1>
+<section id="part-4-interventions" class="level2">
+<h2 class="anchored" data-anchor-id="part-4-interventions"><strong>Part 4:</strong> Interventions</h2>
 <section id="interventions-to-control-dengue" class="level3">
 <h3 class="anchored" data-anchor-id="interventions-to-control-dengue">Interventions to control dengue</h3>
 <p>Interventions against vector-borne diseases can take a number of different forms, because they can target the host (humans in the dengue model we have considered here) or the vector (mosquitoes in our dengue model). Interventions can also act at different stages of the vector life-cycle, for example, spraying to kill mosquito eggs before they hatch.</p>
@@ -5854,6 +5850,7 @@ Recovered human change = recoveries
 <p><input type="button" value="Print this page" onclick="window.print()"></p>
 
 
+</section>
 </section>
 </section>
 
