Move student files -> student materials. Fix typos

--- a/student_materials/InfectiousDiseasesCourse.html
+++ b/student_materials/InfectiousDiseasesCourse.html
@@ -117,6 +117,11 @@ ul.task-list{list-style: none;}
   <a href="./session8_vector_borne_modelling_in_r/session8_vector_borne_modelling_in_r.html" class="sidebar-item-text sidebar-link">Vector-borne disease models in R</a>
   </div>
 </li>
+        <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="./session9_modelling_interventions_in_r/session9_modelling_interventions_in_r.html" class="sidebar-item-text sidebar-link">Modelling interventions in R</a>
+  </div>
+</li>
     </ul>
     </div>
 </nav>
