--- a/student_materials/session1_intro_to_mathematical_modelling/session1_intro_to_mathematical_modelling.html
+++ b/student_materials/session1_intro_to_mathematical_modelling/session1_intro_to_mathematical_modelling.html
@@ -181,6 +181,11 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
   <a href="../session8_vector_borne_modelling_in_r/session8_vector_borne_modelling_in_r.html" class="sidebar-item-text sidebar-link">Vector-borne disease models in R</a>
   </div>
 </li>
+        <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="../session9_modelling_interventions_in_r/session9_modelling_interventions_in_r.html" class="sidebar-item-text sidebar-link">Modelling interventions in R</a>
+  </div>
+</li>
     </ul>
     </div>
 </nav>
