--- a/student_materials/session5_fitting_models_in_r/session5_fitting_models_in_r.html
+++ b/student_materials/session5_fitting_models_in_r/session5_fitting_models_in_r.html
@@ -6,8 +6,8 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
-<meta name="author" content="Thanks to Lisa White, Nuffield Department of Medicine, Oxford University and">
-<meta name="author" content="Michael Meehan, Australian Institute of Tropical Health &amp; Medicine, James Cook University.">
+<meta name="author" content="Thanks to Lisa White, Nuffield Department of Medicine, Oxford University,">
+<meta name="author" content="Michael Meehan, Australian Institute of Tropical Health &amp; Medicine, James Cook University and">
 <meta name="author" content="Adapted and presented by Emma McBryde, Australian Institute of Tropical Health &amp; Medicine, James Cook University">
 <meta name="author" content="July 2022">
 
@@ -185,6 +185,11 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
   <a href="../session8_vector_borne_modelling_in_r/session8_vector_borne_modelling_in_r.html" class="sidebar-item-text sidebar-link">Vector-borne disease models in R</a>
   </div>
 </li>
+        <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="../session9_modelling_interventions_in_r/session9_modelling_interventions_in_r.html" class="sidebar-item-text sidebar-link">Modelling interventions in R</a>
+  </div>
+</li>
     </ul>
     </div>
 </nav>
@@ -216,8 +221,8 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 
 <header id="title-block-header">
 <h1 class="title d-none d-lg-block display-7">COVID-19 Modelling in R</h1>
-<p class="author">Thanks to <a href="http://www.tropmedres.ac/researchers/researcher/lisa-white">Lisa White</a>, Nuffield Department of Medicine, Oxford University and</p>
-<p class="author"><a href="https://research.jcu.edu.au/portfolio/michael.meehan1/">Michael Meehan</a>, Australian Institute of Tropical Health &amp; Medicine, James Cook University.</p>
+<p class="author">Thanks to <a href="http://www.tropmedres.ac/researchers/researcher/lisa-white">Lisa White</a>, Nuffield Department of Medicine, Oxford University,</p>
+<p class="author"><a href="https://research.jcu.edu.au/portfolio/michael.meehan1/">Michael Meehan</a>, Australian Institute of Tropical Health &amp; Medicine, James Cook University and</p>
 <p class="author">Adapted and presented by <a href="https://research.jcu.edu.au/portfolio/emma.mcbryde">Emma McBryde</a>, Australian Institute of Tropical Health &amp; Medicine, James Cook University</p>
 <p class="author">July 2022</p>
 
