--- a/student_materials/session9_modelling_interventions_in_r/session9_modelling_interventions_in_r.html
+++ b/student_materials/session9_modelling_interventions_in_r/session9_modelling_interventions_in_r.html
@@ -6,6 +6,10 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
+<meta name="author" content="Thanks to Lisa White, Nuffield Department of Medicine, Oxford University,">
+<meta name="author" content="Michael Meehan, Australian Institute of Tropical Health &amp; Medicine, James Cook University and">
+<meta name="author" content="Wirichada Pan-Ngum, Department of Tropical Hygiene, Faculty of Tropical Medicine, Mahidol University.">
+<meta name="author" content="Presented by <a href=“https://research.monash.edu/en/persons/michael-lydeamore>Michael Lydeamore, Department of Econometrics and Business Statistics, Monash University">
 
 <title>Modelling interventions in R</title>
 <style>
@@ -181,6 +185,11 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
   <a href="../session8_vector_borne_modelling_in_r/session8_vector_borne_modelling_in_r.html" class="sidebar-item-text sidebar-link">Vector-borne disease models in R</a>
   </div>
 </li>
+        <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="../session9_modelling_interventions_in_r/session9_modelling_interventions_in_r.html" class="sidebar-item-text sidebar-link active">Modelling interventions in R</a>
+  </div>
+</li>
     </ul>
     </div>
 </nav>
@@ -203,9 +212,10 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 
 <header id="title-block-header">
 <h1 class="title d-none d-lg-block display-7">Modelling interventions in R</h1>
-<p class="author"></p><p><strong><em>SPARK short course ‘Mathematical Modelling of Infectious Diseases’, Indonesia, March 2023</em></strong><br>
-<br>
-<strong><em>Developed and presented by <a href="https://www.doherty.edu.au/people/patricia-trish-campbell">Trish Campbell</a>, The University of Melbourne at The Peter Doherty Institute for Infection and Immunity</em></strong></p><p></p>
+<p class="author">Thanks to <a href="http://www.tropmedres.ac/researchers/researcher/lisa-white">Lisa White</a>, Nuffield Department of Medicine, Oxford University,</p>
+<p class="author"><a href="https://research.jcu.edu.au/portfolio/emma.mcbryde">Michael Meehan</a>, Australian Institute of Tropical Health &amp; Medicine, James Cook University and</p>
+<p class="author"><a href="http://www.tropmedres.ac/wirichada-pan-ngum">Wirichada Pan-Ngum</a>, Department of Tropical Hygiene, Faculty of Tropical Medicine, Mahidol University.</p>
+<p class="author">Presented by &lt;a href=“https://research.monash.edu/en/persons/michael-lydeamore&gt;Michael Lydeamore, Department of Econometrics and Business Statistics, Monash University</p>
 
 </header>
 
@@ -653,14 +663,14 @@ Which type of uncertainty does this capture? What other types of uncertainty sho
 </section>
 <section id="exploring-counterfactuals" class="level1">
 <h1>Exploring counterfactuals</h1>
-<p>Now we have a model for the COVID-19 transmission in Thailand, and we have estimates of how effective the tw os tages of interventions were (emergency and curfew), we can now explore what <em>could</em> have happened, or the <strong>counterfactuals</strong>.</p>
+<p>Now we have a model for the COVID-19 transmission in Thailand, and we have estimates of how effective the two stages of interventions were (emergency and curfew), we can now explore what <em>could</em> have happened, or the <strong>counterfactuals</strong>.</p>
 What could have happened if no intervention was applied?
 <textarea name="Text1" cols="127" rows="2"></textarea>
 What could have happened if we started the emergency stage earlier?
 <textarea name="Text1" cols="127" rows="2"></textarea>
 What other interesting counterfactual scenarios could we explore?
 <textarea name="Text1" cols="127" rows="2"></textarea>
-Which of the scenarios you suggested previously might be of interested to the general public and why? Woudl the scenarios of interest to decision makers be different? If so, how and why?
+Which of the scenarios you suggested previously might be of interest to the general public and why? Would the scenarios of interest to decision makers be different? If so, how and why?
 <textarea name="Text1" cols="127" rows="2"></textarea>
 
 
