fix missing quote

--- a/student_materials/session9_modelling_interventions_in_r/session9_modelling_interventions_in_r.html
+++ b/student_materials/session9_modelling_interventions_in_r/session9_modelling_interventions_in_r.html
@@ -9,7 +9,7 @@
 <meta name="author" content="Thanks to Lisa White, Nuffield Department of Medicine, Oxford University,">
 <meta name="author" content="Michael Meehan, Australian Institute of Tropical Health &amp; Medicine, James Cook University and">
 <meta name="author" content="Wirichada Pan-Ngum, Department of Tropical Hygiene, Faculty of Tropical Medicine, Mahidol University.">
-<meta name="author" content="Presented by <a href=“https://research.monash.edu/en/persons/michael-lydeamore>Michael Lydeamore, Department of Econometrics and Business Statistics, Monash University">
+<meta name="author" content="Presented by Michael Lydeamore, Department of Econometrics and Business Statistics, Monash University">
 
 <title>Modelling interventions in R</title>
 <style>
@@ -215,7 +215,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <p class="author">Thanks to <a href="http://www.tropmedres.ac/researchers/researcher/lisa-white">Lisa White</a>, Nuffield Department of Medicine, Oxford University,</p>
 <p class="author"><a href="https://research.jcu.edu.au/portfolio/emma.mcbryde">Michael Meehan</a>, Australian Institute of Tropical Health &amp; Medicine, James Cook University and</p>
 <p class="author"><a href="http://www.tropmedres.ac/wirichada-pan-ngum">Wirichada Pan-Ngum</a>, Department of Tropical Hygiene, Faculty of Tropical Medicine, Mahidol University.</p>
-<p class="author">Presented by &lt;a href=“https://research.monash.edu/en/persons/michael-lydeamore&gt;Michael Lydeamore, Department of Econometrics and Business Statistics, Monash University</p>
+<p class="author">Presented by <a href="https://research.monash.edu/en/persons/michael-lydeamore">Michael Lydeamore</a>, Department of Econometrics and Business Statistics, Monash University</p>
 
 </header>
 
