--- a/student_materials/session3_writing_a_model_to_suit_the_infectious_agent/session3_writing_a_model_to_suit_the_infectious_agent.html
+++ b/student_materials/session3_writing_a_model_to_suit_the_infectious_agent/session3_writing_a_model_to_suit_the_infectious_agent.html
@@ -104,7 +104,7 @@ ul.task-list{list-style: none;}
 </li>
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="../session5_fitting_models_in_r/session5_fitting_models_in_r.html" class="sidebar-item-text sidebar-link">COVID-19 Modelling in R</a>
+  <a href="../session5_fitting_models_in_r/session5_fitting_models_in_r.html" class="sidebar-item-text sidebar-link">Modelling an outbreak - COVID-19 in Thailand</a>
   </div>
 </li>
         <li class="sidebar-item">
