render updates to vectorborne sessions with vector definition and profile link

--- a/student_materials/session8_vector_borne_modelling_in_r/session8_vector_borne_modelling_in_r.html
+++ b/student_materials/session8_vector_borne_modelling_in_r/session8_vector_borne_modelling_in_r.html
@@ -4347,8 +4347,8 @@ color: blue
 <h1 class="title d-none d-lg-block display-7">Applying vector-borne disease models in R</h1>
 <p class="author"></p><p><strong><em>SPARK short course ‘Mathematical Modelling of Infectious Diseases’, Indonesia, June 2023</em></strong><br>
 <br>
-<strong><em>Developed and presented by <a href="https://www.doherty.edu.au/people/patricia-trish-campbell">Trish Campbell</a>, The University of Melbourne at The Peter Doherty Institute for Infection and Immunity</em></strong><br>
-<strong><em>Updated and presented by Kartika Saraswati, for Indonesia June 2023 short course.</em></strong></p><p></p>
+<strong><em>Developed and presented by <a href="https://www.doherty.edu.au/people/patricia-trish-campbell">Dr Trish Campbell</a>, The University of Melbourne at The Peter Doherty Institute for Infection and Immunity</em></strong><br>
+<strong><em>Updated and presented by <a href="https://www.linkedin.com/in/kartikasaraswati/?originalSubdomain=uk">Dr Kartika Saraswati</a>, for Indonesia June 2023 short course.</em></strong></p><p></p>
 
 </header>
 
